@@ -6,6 +6,7 @@ kiwix_index_SOURCES= \
 	../common/kiwix/xapian/htmlparse.cc \
 	../common/stringTools.cpp \
 	../common/resourceTools.cpp \
+	../common/pathTools.cpp \
 	../common/kiwix/indexer.cpp \
 	../common/kiwix/reader.cpp \
 	../common/kiwix/xapianIndexer.cpp \
@@ -15,6 +16,7 @@ kiwix_index_SOURCES= \
 	../common/kiwix/xapian/htmlparse.h \
 	../common/stringTools.h \
 	../common/resourceTools.h \
+	../common/pathTools.h \
 	../common/kiwix/indexer.h \
 	../common/kiwix/reader.h \
 	../common/kiwix/xapianIndexer.h \
