@@ -6,13 +6,14 @@ Kiwix 0.9 rc3
 * FIXED: Unavailable kiwix-serve from the UI on Linux, if not installed (#411)
 * FIXED: kiwix-serve UI for non-javascript browsers like Dillo (#587)
 * FIXED: kiwix-serve crahs if really long URL (#400)
-* FIXED: small display issue if multilingual ZIM file
+* FIXED: Small display issue if multilingual ZIM file
 * FIXED: Toolbar buttons order
 * FIXED: Argument forwarding in kiwix-launcher
 * FIXED: Copy to clipboard if inverted colors (#414)
 * FIXED: Select all inverted colors
 * FIXED: Browser widget resizing sync. with the window (#382)
 * FIXED: Encoding issue in kiwix-serve 404 error message
+* FIXED: Abstruse index names (#84)
 * NEW: New supported user interface languages: Chuvash (cv), Fiji
   Hindi Latin script (hif-latn), Mongolian (mn), Newari (new),
   Sanskrit (sa), Uzbek (uz)
